--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" >
-    <meta name="keywords" content="wehome，海外房产，海外房产股权投资，海外投资，海外房产投资" />
-    <meta name="description" content="wehome是一家基于大数据、专业安全的海外房产股权投资平台" />
+    <meta name="keywords" content="Wehome, US real estate, US real estate equity investment
+    ,US investment, US real estate investment" />
+    <meta name="description" content="Wehome is a secure big data AI driven real estate equity trading platform" />
     <link rel="shortcut icon" href=favicon.ico>
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
